--- a/public/index.html
+++ b/public/index.html
@@ -20,3 +20,8 @@
     <div id="root"></div>
   </body>
 </html>
+
+<script>
+  document.body.requestFullscreen()
+  screen.orientation.lock("portrait")
+</script>
