--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><title>Sortir.io Attestation Vite</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Sortir.io Attestation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -22,6 +23,14 @@
 </html>
 
 <script>
-  document.body.requestFullscreen()
-  screen.orientation.lock("portrait")
+  history.pushState(null, null, window.top.location.pathname + window.top.location.search);
+  window.addEventListener('popstate', (e) => {
+      e.preventDefault();
+      history.pushState(null, null, window.top.location.pathname + window.top.location.search);
+  });
+
+  window.onload = function() {
+    document.body.requestFullscreen()
+    screen.orientation.lock("portrait")
+  }
 </script>
