--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/logo192.png" />
     <meta
       name="description"
       content="Quick Generator for L'attestation de deplacement derogatoire during the COVID-19 lockdown in France"
@@ -19,18 +21,30 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript">
+      history.pushState(null, null, window.top.location.pathname + window.top.location.search);
+      window.addEventListener('popstate', (e) => {
+          e.preventDefault();
+          history.pushState(null, null, window.top.location.pathname + window.top.location.search);
+      });
+    
+      window.onload = function() {
+        document.body.requestFullscreen()
+        screen.orientation.lock("portrait")
+      }
+    </script>
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        console.log("Will the service worker register?")
+        navigator.serviceWorker.register('service-worker.js')
+          .then(function(reg) {
+            console.log("yes it did")
+          }).catch(function(err) {
+            console.log("no it didn't: ", err)
+          })
+      }
+    </script>
   </body>
 </html>
 
-<script>
-  history.pushState(null, null, window.top.location.pathname + window.top.location.search);
-  window.addEventListener('popstate', (e) => {
-      e.preventDefault();
-      history.pushState(null, null, window.top.location.pathname + window.top.location.search);
-  });
 
-  window.onload = function() {
-    document.body.requestFullscreen()
-    screen.orientation.lock("portrait")
-  }
-</script>
